@@ -32,8 +32,13 @@
 class action_find_handler_T : public action_portage_find_handler_T
 {
     public:
+        action_find_handler_T() : action_portage_find_handler_T(),
+                                  meta(optget("meta", bool)) { }
         virtual ~action_find_handler_T() { }
         virtual int operator() (opts_type &);
+
+    private:
+        const bool meta;
 };
 
 #endif
